Enhance UI and functionality across multiple pages
- Added small button styles for API key actions in api.css.
- Adjusted layout and spacing in dashboard.css and transaction-check.css for better alignment.
- Implemented sorting functionality in history.js with visual indicators for sorted columns.
- Updated API key display and copy functionality in api.js, including feedback for copy actions.
- Improved user profile display and logout functionality in dashboard.js.
- Refactored HTML structure in api.html, dashboard.html, and transaction-check.html for better readability and maintainability.
- Removed unused search bar components from dashboard.html and transaction-check.html.
- Enhanced tooltip styles in website-check.css for better visibility.
- Added method and email display in transaction details across relevant scripts.

--- a/pages/api.html
+++ b/pages/api.html
@@ -34,9 +34,16 @@
             <div class="api-key-section">
                 <h4>Your API Key</h4>
                 <div class="api-key-display">
-                    <code id="apiKeyDisplay">Loading...</code>
-                    <button id="copyApiKey" class="copy-btn" title="Copy API Key">
+                    <code id="apiKeyText">Loading...</code>
+                    <button id="copyApiKeyButton" class="copy-btn" title="Copy API Key">
                         <i class="fas fa-copy"></i>
+                        <span id="copyButtonText" class="copy-text">Copy</span>
+                    </button>
+                </div>
+                <div class="api-key-actions">
+                    <button id="regenerateApiKeyButton" class="btn btn-outline btn-sm">
+                        <i class="fas fa-sync-alt"></i>
+                        Regenerate
                     </button>
                 </div>
                 <p class="api-key-note">Keep your API key secure and don't share it publicly.</p>
