--- a/pages/history.html
+++ b/pages/history.html
@@ -106,16 +106,6 @@
             <div class="history-content">
                 <div class="page-header">
                     <h1>Search History</h1>
-                    <div class="header-actions">
-                        <button class="btn btn-outline" id="exportButton">
-                            <i class="fas fa-download"></i>
-                            Export
-                        </button>
-                        <button class="btn btn-outline" id="clearHistoryButton">
-                            <i class="fas fa-trash"></i>
-                            Clear History
-                        </button>
-                    </div>
                 </div>
                 
                 <!-- History Table -->
@@ -182,6 +172,10 @@
                 <div class="detail-row">
                     <span class="detail-label">Email:</span>
                     <span class="detail-value" id="modalEmail">-</span>
+                </div>
+                <div class="detail-row">
+                    <span class="detail-label">Method:</span>
+                    <span class="detail-value" id="modalMethod">-</span>
                 </div>
                 <div class="detail-row">
                     <span class="detail-label">Old Balance (Origin):</span>
