--- a/pages/website-check.html
+++ b/pages/website-check.html
@@ -68,10 +68,7 @@
         <main class="main-content">
             <!-- Top Navigation -->
             <nav class="top-nav">
-                <div class="search-bar">
-                    <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Search...">
-                </div>
+                <div class="nav-spacer"></div>
                 
                 <div class="top-nav-right">
                     <div class="user-profile">
