Refactor history management and API integration
- Improved history data loading and error handling in history.js
- Enhanced sorting functionality and removed dummy data generation
- Updated transaction-check.js to use real API calls for predictions
- Streamlined website-check.js to handle API requests and responses more effectively
- Added confidence score display and improved risk assessment logic across transaction and website checks
- Implemented better user feedback for no history and error states
- Introduced global state management for history data to facilitate modal access

--- a/pages/website-check.html
+++ b/pages/website-check.html
@@ -12,7 +12,7 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <a href="dashboard.html" class="logo">
+                <a href="home.html" class="logo">
                     <i class="fas fa-shield-alt"></i>
                     <span>FraudShield</span>
                 </a>
