Refactor API documentation and improve user interface for website check and dashboard navigation

--- a/pages/api.html
+++ b/pages/api.html
@@ -454,9 +454,7 @@ Content-Type: application/json</code></pre>
                 <div class="info-box">
                     <h3>Current Limits</h3>
                     <ul>
-                        <li><strong>Free Tier:</strong> 100 requests per hour</li>
-                        <li><strong>Pro Tier:</strong> 1,000 requests per hour</li>
-                        <li><strong>Enterprise:</strong> Custom limits</li>
+                        <li><strong>All Users:</strong> 100 requests per hour</li>
                     </ul>
                 </div>
                 
