--- a/pages/home.html
+++ b/pages/home.html
@@ -127,10 +127,9 @@
         <div class="footer-bottom">
             <p>&copy; 2025 FraudShield. All rights reserved.</p>
             <div class="social-links">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/basilbenny1002/Ecommerce-Transaction-Fraud-detection-mini-project" target="_blank" title="View on GitHub">
+                    <i class="fab fa-github"></i>
+                </a>
             </div>
         </div>
     </footer>
