--- a/pages/website-check.html
+++ b/pages/website-check.html
@@ -205,18 +205,11 @@
                         
                         <div class="result-details">
                             <div class="result-score">
-                                <span class="result-label">Risk Score:</span>
+                                <span class="result-label">Confidence Score:</span>
                                 <div class="score-bar">
                                     <div id="resultScoreBar" class="score-fill" style="width: 0%"></div>
                                 </div>
                                 <span id="resultScoreValue" class="score-value">0%</span>
-                            </div>
-                            
-                            <div class="result-factors">
-                                <h3>Risk Factors</h3>
-                                <ul id="resultFactorsList">
-                                    <li class="loading">Loading risk factors...</li>
-                                </ul>
                             </div>
                         </div>
                     </div>
