--- a/pages/transaction-check.html
+++ b/pages/transaction-check.html
@@ -389,6 +389,117 @@
                                         <option value="Bangladesh">
                                         <option value="Sri Lanka">
                                         <option value="Maldives">
+                                        <option value="Comoros">
+                                        <option value="Cape Verde">
+                                        <option value="Sao Tome and Principe">
+                                        <option value="Guinea-Bissau">
+                                        <option value="Guinea">
+                                        <option value="Sierra Leone">
+                                        <option value="Liberia">
+                                        <option value="Togo">
+                                        <option value="Benin">
+                                        <option value="Niger">
+                                        <option value="Chad">
+                                        <option value="Central African Republic">
+                                        <option value="Equatorial Guinea">
+                                        <option value="Gabon">
+                                        <option value="Congo (Brazzaville)">
+                                        <option value="Burkina Faso">
+                                        <option value="Mali">
+                                        <option value="Mauritania">
+                                        <option value="Gambia">
+                                        <option value="Senegal">
+                                        <option value="Tunisia">
+                                        <option value="Libya">
+                                        <option value="Western Sahara">
+                                        <option value="Greenland">
+                                        <option value="Puerto Rico">
+                                        <option value="Cuba">
+                                        <option value="Dominican Republic">
+                                        <option value="Haiti">
+                                        <option value="Jamaica">
+                                        <option value="Trinidad and Tobago">
+                                        <option value="Bahamas">
+                                        <option value="Barbados">
+                                        <option value="Saint Lucia">
+                                        <option value="Saint Vincent and the Grenadines">
+                                        <option value="Grenada">
+                                        <option value="Antigua and Barbuda">
+                                        <option value="Saint Kitts and Nevis">
+                                        <option value="Dominica">
+                                        <option value="Belize">
+                                        <option value="Guatemala">
+                                        <option value="Honduras">
+                                        <option value="El Salvador">
+                                        <option value="Nicaragua">
+                                        <option value="Costa Rica">
+                                        <option value="Panama">
+                                        <option value="Guyana">
+                                        <option value="Suriname">
+                                        <option value="French Guiana">
+                                        <option value="Paraguay">
+                                        <option value="Uruguay">
+                                        <option value="Bolivia">
+                                        <option value="Ecuador">
+                                        <option value="Falkland Islands">
+                                        <option value="French Polynesia">
+                                        <option value="New Caledonia">
+                                        <option value="Vanuatu">
+                                        <option value="Solomon Islands">
+                                        <option value="Kiribati">
+                                        <option value="Tuvalu">
+                                        <option value="Samoa">
+                                        <option value="Tonga">
+                                        <option value="Marshall Islands">
+                                        <option value="Micronesia">
+                                        <option value="Palau">
+                                        <option value="Nauru">
+                                        <option value="Cook Islands">
+                                        <option value="Niue">
+                                        <option value="Tokelau">
+                                        <option value="Wallis and Futuna">
+                                        <option value="American Samoa">
+                                        <option value="Guam">
+                                        <option value="Northern Mariana Islands">
+                                        <option value="US Virgin Islands">
+                                        <option value="British Virgin Islands">
+                                        <option value="Cayman Islands">
+                                        <option value="Turks and Caicos Islands">
+                                        <option value="Anguilla">
+                                        <option value="Montserrat">
+                                        <option value="Bermuda">
+                                        <option value="Aruba">
+                                        <option value="Curacao">
+                                        <option value="Sint Maarten">
+                                        <option value="Bonaire, Sint Eustatius and Saba">
+                                        <option value="Saint Pierre and Miquelon">
+                                        <option value="Saint Helena, Ascension and Tristan da Cunha">
+                                        <option value="Gibraltar">
+                                        <option value="Isle of Man">
+                                        <option value="Jersey">
+                                        <option value="Guernsey">
+                                        <option value="Faroe Islands">
+                                        <option value="Aland Islands">
+                                        <option value="Svalbard and Jan Mayen">
+                                        <option value="San Marino">
+                                        <option value="Vatican City">
+                                        <option value="Monaco">
+                                        <option value="Liechtenstein">
+                                        <option value="Andorra">
+                                        <option value="Malta">
+                                        <option value="Singapore">
+                                        <option value="Hong Kong">
+                                        <option value="Macau">
+                                        <option value="Taiwan">
+                                        <option value="North Korea">
+                                        <option value="South Korea">
+                                        <option value="Japan">
+                                        <option value="Mongolia">
+                                        <option value="Bhutan">
+                                        <option value="Nepal">
+                                        <option value="Bangladesh">
+                                        <option value="Sri Lanka">
+                                        <option value="Maldives">
                                         <option value="Pakistan">
                                         <option value="Afghanistan">
                                         <option value="Iran">
@@ -527,6 +638,9 @@
                                         <option value="Guyana">
                                         <option value="Suriname">
                                         <option value="French Guiana">
+                                        <option value="Paraguay">
+                                        <option value="Uruguay">
+                                        <option value="Bolivia">
                                         <option value="Ecuador">
                                         <option value="Peru">
                                         <option value="Brazil">
@@ -558,7 +672,7 @@
                                 <label for="clientMail">Email Address</label>
                                 <div class="input-with-icon">
                                     <i class="fas fa-envelope"></i>
-                                    <input type="email" id="clientMail" name="clientMail" placeholder="Client email address" required>
+                                    <input type="email" id="clientMail" name="clientMail" placeholder="Client email address(optional)">
                                 </div>
                             </div>
                             <div class="form-group">
