--- a/pages/website-check.html
+++ b/pages/website-check.html
@@ -117,6 +117,14 @@
                             </div>
                         </div>
                         
+                        <div class="form-group">
+                            <label for="clientMail">Client Email (Optional)</label>
+                            <div class="input-with-icon">
+                                <i class="fas fa-envelope"></i>
+                                <input type="email" id="clientMail" name="clientMail" placeholder="e.g., client@example.com">
+                            </div>
+                        </div>
+
                         <div id="featureSelection">
                             <div class="form-divider">
                                 <span>Payment Options</span>
