--- a/pages/signin.html
+++ b/pages/signin.html
@@ -42,7 +42,7 @@
                         <input type="checkbox" id="remember">
                         <label for="remember">Remember me</label>
                     </div>
-                    <a href="#" class="forgot-password">Forgot password?</a>
+                    <!-- <a href="#" class="forgot-password">Forgot password?</a> -->
                 </div>
                 
                 <button type="submit" id="signInButton" class="btn btn-primary btn-block">Sign In</button>
