Update the backend url to the hosted one

--- a/pages/api.html
+++ b/pages/api.html
@@ -75,7 +75,7 @@
                 
                 <div class="info-box">
                     <h3>Base URL</h3>
-                    <code>http://localhost:8000</code>
+                    <code>https://ecommerce-transaction-fraud-detection.onrender.com</code>
                 </div>
                 
                 <div class="feature-grid">
@@ -229,7 +229,7 @@ Content-Type: application/json</code></pre>
                             <i class="fas fa-copy"></i>
                         </button>
                     </div>
-                    <pre><code class="language-bash">curl -X POST http://localhost:8000/api/predict \
+                    <pre><code class="language-bash">curl -X POST https://ecommerce-transaction-fraud-detection.onrender.com/api/predict \
   -H "Authorization: Bearer YOUR_API_KEY" \
   -H "Content-Type: application/json" \
   -d '{
@@ -324,7 +324,7 @@ Content-Type: application/json</code></pre>
                             <i class="fas fa-copy"></i>
                         </button>
                     </div>
-                    <pre><code class="language-bash">curl -X POST http://localhost:8000/api/predict \
+                    <pre><code class="language-bash">curl -X POST https://ecommerce-transaction-fraud-detection.onrender.com/api/predict \
   -H "Authorization: Bearer YOUR_API_KEY" \
   -H "Content-Type: application/json" \
   -d '{
