Modified the api.html

--- a/pages/api.html
+++ b/pages/api.html
@@ -510,7 +510,7 @@ Content-Type: application/json</code></pre>
                     </ul>
                 </div>
                 
-                <p>Rate limit information is included in response headers:</p>
+                <!-- <p>Rate limit information is included in response headers:</p>
                 <div class="code-block">
                     <div class="code-header">
                         <span>Headers</span>
@@ -521,7 +521,7 @@ Content-Type: application/json</code></pre>
                     <pre><code class="language-http">X-RateLimit-Limit: 100
 X-RateLimit-Remaining: 95
 X-RateLimit-Reset: 1641472800</code></pre>
-                </div>
+                </div> -->
             </section>
         </main>
     </div>
